# kredens

./: .editorconfig  .eslintrc.js  README.md  kredens.code-workspace  package-lock.json  package.json  samples.http  tsconfig.json  tslint.json  webpack.config.ts
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
kredens-backend/: README.md  pyproject.toml
kredens-backend/kredens/: app.py  database.py  settings.py
sql/migrations/: applied.sql  create.sql  lock.sql  unlock.sql
sql/migrations/patches/20190925000000-updated-at/: up.sql
sql/sessions/: all.sql  clear.sql  destroy.sql  get.sql  length.sql  set.sql  touch.sql
sql/tasks/: count.sql  hasNext.sql  hasPrev.sql  list.sql  listReverse.sql
sql/users/: create.sql  details.sql  login.sql
src/: api.ts  auth.ts  custom.d.ts  graphql.ts  index.ts  sessions.ts
src/api/: index.ts  resolvers.ts  typeDefs.ts
src/db/: index.ts  models.ts
src/db/repos/: index.ts  migrations.ts  sessions.ts  tasks.ts  users.ts
src/db/sql/: index.ts
src/frontend/: App.vue  index.ts  index.tsx  noise.ts  tslint.json  vue-shim.d.ts
src/frontend/api/: tasks.ts  types.ts
src/frontend/components/: App.tsx  TaskList.tsx
src/frontend/store/: index.ts  sagas.ts
src/routes/: auth.ts  bootstrap.ts  home.ts  index.ts
src/scripts/: migrate.js  migrate.ts
src/server/: auth.ts  crypto.ts  custom.d.ts  index.ts  logger.ts  sessions.ts  tslint.json
src/server/db/: index.ts  models.ts
src/server/routes/: api.ts  auth.ts  bootstrap.ts  home.ts  index.ts
views/: index.pug  layout.pug  login.pug
(+18 files in other folders)
