[tool.poetry]
name = "kredens"
version = "0.1.0"
description = ""
authors = ["ModZero <modzero@modzero.xyz>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.25"
psycopg = {extras = ["binary"], version = "^3.1.17"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
